--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@emailjs/browser": "^4.4.1",
     "animate.css": "^4.1.1",
     "antd": "^5.23.3",
